@@ -1,3 +1,4 @@
+
 buildscript {
     repositories {
         jcenter()
@@ -17,9 +18,14 @@ apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 group 'com.jaguth'
-version '1.1'
+version '1.1.1'
 
 sourceCompatibility = 1.8
+
+def BUILDTOOLS_VERSION = "1.14.3"
+def BUILDTOOLS_DIR = "$projectDir/buildtools"
+def PLUGINS_DIR = "$BUILDTOOLS_DIR/plugins"
+def PLUGIN_NAME = "spigotpluggin.awsmgr-$version-all.jar"
 
 repositories {
     mavenCentral()
@@ -33,7 +39,7 @@ repositories {
 }
 
 dependencies {
-    compile 'org.spigotmc:spigot-api:1.14.2-R0.1-SNAPSHOT' // from https://hub.spigotmc.org/nexus/content/repositories/snapshots/
+    compile "org.spigotmc:spigot-api:$BUILDTOOLS_VERSION-R0.1-SNAPSHOT" // from https://hub.spigotmc.org/nexus/content/repositories/snapshots/
 
     compile 'com.amazonaws:aws-java-sdk-ec2:1.11.505'
     compile 'com.amazonaws:aws-java-sdk-sts:1.11.505'
@@ -44,10 +50,7 @@ dependencies {
     testCompile 'org.powermock:powermock-api-mockito2:2.0.0'
 }
 
-def BUILDTOOLS_VERSION = "1.14.2"
-def BUILDTOOLS_DIR = "$projectDir/buildtools"
-def PLUGINS_DIR = "$BUILDTOOLS_DIR/plugins"
-def PLUGIN_NAME = "spigotpluggin.awsmgr-$version-all.jar"
+
 
 task deleteFromSpigotServer(type: Delete) {
     delete "$PLUGINS_DIR/$PLUGIN_NAME"
@@ -66,12 +69,13 @@ task downloadBuildTools(group: 'spigot', type: Download) {
     dest "buildtools/BuildTools.jar"
 }
 
-task createStartSpigotScript (group: 'spigot') {
-    File startSpigotBatchFile = new File("$BUILDTOOLS_DIR/startSpigot.cmd")
+task buildTheBuildTools(group: 'spigot', dependsOn: jar) << {
+    println "It will take a few minutes to build the build tools"
 
-    if (!startSpigotBatchFile.exists()) {
-        def command = "java -Xms512M -Xmx1G -XX:+UseConcMarkSweepGC -jar spigot-1.14.2.jar"
-        startSpigotBatchFile.write command
+    javaexec {
+        workingDir = BUILDTOOLS_DIR
+        main = "-jar"
+        args '-Xmx1024M', '-jar', "$BUILDTOOLS_DIR/BuildTools.jar", '--rev', BUILDTOOLS_VERSION
     }
 }
 
